--- a/games.html
+++ b/games.html
@@ -6,7 +6,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Jordan's Math Work</title>
+	<title>Taher Khaders Games list 
+</title>
 	<link rel="icon" href="/img/JMWfavicon.png" />
 	<link rel="shortcut icon" href="/img/JMWfavicon.png" />
 	<style>
