--- a/games.html
+++ b/games.html
@@ -41,7 +41,7 @@ button {
 
 <body>
   <div align="center">
-	<h1>Jordan's G<span>ame list</h1>
+	<h1>Tahers g<span>ame list</h1>
 	<div class="gxmelist">
 		<a href="sdd">
 			<img src="img/darkdeception.jpg" class="gameimg">
